# sgraph-omega-connector

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
connector/: __init__.py  app.py  auth.py  config.py  errors.py  logging_utils.py  models.py  omega_client.py  security.py
contracts/: README.md
contracts/openapi/: connector-v1.yaml
deploy/: README.md
deploy/compose/: docker-compose.local.yml
deploy/omega/: Dockerfile
deploy/proxy/: Dockerfile  entrypoint.sh  nginx.conf
docs/: CONTRACT.md  CONTRACT_CHANGE_POLICY.md  INTEGRATION_ARCHITECTURE.md  OPEN_SOURCE_PUBLISHING_GUIDE.md  OPS_RECOVERY.md  README.md
env/: .env.cloud.example  .env.example  .env.local.example
scripts/: __init__.py  compose_healthcheck.py  e2e_connector_body_limit_probe.py  e2e_connector_boundary_20mb.py  e2e_sgraph_real_path.py  e2e_sgraph_upstream_connector_path.py  generate_qualification_report.py  perf_report.py  preflight_upstream.py  signature_helper.py  smoke_local.py
tests/: TEST_PLAN.md
tests/e2e/: test_compose_scenarios.py  test_openapi_contract.py
tests/integration/: test_api_flow.py  test_hmac_auth.py
tests/perf/: baseline.js  stress.js
tests/unit/: test_normalization.py  test_omega_client.py  test_security.py
upstream_patches/: COPY_PASTE_CHECKLIST.md  README.md
(+17 files in other folders)
