[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgraph-omega-connector"
version = "0.1.0"
description = "Integration hub between SGraph Send and Omega Walls"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
  "pydantic>=2.6",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "jsonschema>=4.21",
  "PyYAML>=6.0",
  "pre-commit>=3.6"
]

[tool.setuptools]
packages = ["connector"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
